Embedded C/Exercises_Part2/Exercises_Part2_Eclipse_WS/.metadata/.plugins/org.eclipse.cdt.ui/BitFields_Ex3.build.log
23:19:57 **** Incremental Build of configuration Debug for project BitFields_Ex3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\BitFields_Ex3.o" "..\\src\\BitFields_Ex3.c" 
..\src\BitFields_Ex3.c: In function 'main':
..\src\BitFields_Ex3.c:21:2: error: cannot take address of bit-field 'Set2'
  printf("%d\n",&(Current.Set2));
  ^

23:19:57 Build Finished (took 123ms)

